tests/toy/neg/001510_mutation.toylang
program a = { var a var : bool; } .
